Added pagination of categories getAll, swagger category documentation in progress
