# routes/categories.js
@@ -1,12 +1,12 @@
 const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/CategoryController')
-const { createValidator, getOneValidator } = require('../middleware/categoryValidation')
+const { createValidator, getOneValidator,getAllValidator } = require('../middleware/categoryValidation')
 const { isAdmin } = require('../middleware/isAdmin')
 const { authenticate: auth } = require('../middleware/authenticate')
 
 /* GET categories */
-router.get('/', auth, isAdmin, controller.getCategories);
+router.get('/', auth, isAdmin,getAllValidator, controller.getCategories);
 router.get('/:id', auth, isAdmin, getOneValidator, controller.getCategory);
 
 /* POST categories */
